updating local host references to state IP

--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -179,7 +179,7 @@
           $btn.button('loading');
         var user_id = document.getElementById('profile').innerHTML;
         $.ajax({
-          url: 'http://localhost/discover',
+          url: 'http://54.172.52.156/discover',
           crossDomain:true,
           data: {
             'access_token': access_token,
