updating copy and button

--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -58,8 +58,9 @@
     <script id="user-profile-template" type="text/x-handlebars-template">
         <div>
           <img class="media-object" width="150" style="border-radius:50%; margin:auto;" src="{{images.0.url}}"/>
-          <h1 style="color:white;">Wah Gwan, {{display_name}} </h1>
-          <span id="profile" class="muted" style="font-size:13px; color:#ccc;">{{id}}</span><
+          <h1 style="color:white;">Thanks for stopping by, {{display_name}}</h1>
+          <span id="profile" class="muted" style="font-size:13px; color:#34393C;">{{id}}</span>
+          <
         </div>
       
       
@@ -89,7 +90,8 @@
     </div>
     </script>
     <div id = "vibify-button" style="text-align:center; display:none;">
-   <button type="button" class="btn btn-success" id="send-token" data-loading-text= "<span class='glyphicon-left glyphicon glyphicon-refresh spinning'></span> Vibing ...">Vibify your Discover Weekly</button>
+      <h4>Vibify reorders your Discover Weekly tracks into a new playlist so that you can spend more time vibing and less time skipping.</h4>
+   <button type="button" class="btn btn-success btn-lg" id="send-token" data-loading-text= "<span class='glyphicon-left glyphicon glyphicon-refresh spinning'></span> Vibing your List..."><i class="glyphicon glyphicon-play" style="font-size:55px;"></i>Play your Vibify Weekly</button>
     </div>
    
 
