--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -58,7 +58,7 @@
     <script id="user-profile-template" type="text/x-handlebars-template">
         <div>
           <img class="media-object" width="150" style="border-radius:50%; margin:auto;" src="{{images.0.url}}"/>
-          <h1 style="color:white;">Thanks for stopping by, {{display_name}}</h1>
+          <h2 style="color:#7c25f8;">Thanks for stopping by {{display_name}}</h2>
           <span id="profile" class="muted" style="font-size:13px; color:#34393C;">{{id}}</span>
           <
         </div>
@@ -90,7 +90,7 @@
     </div>
     </script>
     <div id = "vibify-button" style="text-align:center; display:none;">
-      <h4>Vibify reorders your Discover Weekly tracks into a new playlist so that you can spend more time vibing and less time skipping.</h4>
+      <span style="color:white; font-size:13px;">Vibify reorders your Discover Weekly tracks into a new playlist so that you can spend more time vibing and less time skipping.</span>
    <button type="button" class="btn btn-success btn-lg" id="send-token" data-loading-text= "<span class='glyphicon-left glyphicon glyphicon-refresh spinning'></span> Vibing your List..."><i class="glyphicon glyphicon-play" style="font-size:55px;"></i>Play your Vibify Weekly</button>
     </div>
    
