repositioning how-it-works

--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -40,6 +40,12 @@
       ol li {
         margin-bottom:8px;
       }
+
+      #how-it-works {
+        margin:auto;
+        width:50%;
+        color:#aaa;
+      }
     </style>
   </head>
 
@@ -62,7 +68,7 @@
     <script id="user-profile-template" type="text/x-handlebars-template">
         <div>
           <img class="media-object" width="150" style="border-radius:50%; margin:auto;" src="{{images.0.url}}"/>
-          <h2 style="color:#7c25f8;">Thanks for stopping by {{display_name}}</h2>
+          <h2 style="color:#9bf0e1;">Thanks for stopping by {{display_name}}</h2>
           <span id="profile" class="muted" style="font-size:13px; color:#34393C;">{{id}}</span>
           <
         </div>
