updating how-it-works css. updated color for subheader

--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -43,8 +43,9 @@
 
       #how-it-works {
         margin:auto;
-        width:50%;
+        width:60%;
         color:#aaa;
+        margin-top:20%;
       }
     </style>
   </head>
@@ -53,7 +54,7 @@
     <div class="container">
       <div id="login" align="center">
         <h1 style="color:white;">Vibify</h1>
-        <p style="color:#ccc;">Stop hitting 'next' on your Spotify Discover Weekly</p>
+        <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
         <a href="/login" class="btn btn-primary" onClick="javascript:showVibify();">Log in with Spotify</a>
       </div>
       <div id="loggedin">
@@ -107,11 +108,11 @@
     Woops! The vibes have been interrupted. We're working on restoring your session
 </div>
     <div id = "how-it-works" style="display:block;">
-      <p class="text-uppercase">how it works</p>
+      <p style="text-transform:uppercase;">how it works</p>
       <ol>
         <li>Your Discover Weekly tracks are rearranged for optimum vibes</li>
         <li>A new Vibify Weekly list is added to your library</li>
-        <li>You vibe and never skip a track</li>
+        <li>You play it through and never skip a track</li>
       </ol>
       </div>
    
