adding css declaration to center how it works

--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -45,7 +45,7 @@
         margin:auto;
         width:60%;
         color:#aaa;
-        margin-top:20%;
+        margin-top:40%;
       }
     </style>
   </head>
@@ -107,7 +107,7 @@
     <button type="button" class="close">×</button>
     Woops! The vibes have been interrupted. We're working on restoring your session
 </div>
-    <div id = "how-it-works" style="display:block;">
+    <div id = "how-it-works" style="display:block; text-align:center;">
       <p style="text-transform:uppercase;">how it works</p>
       <ol>
         <li>Your Discover Weekly tracks are rearranged for optimum vibes</li>
