--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -107,8 +107,8 @@
     <button type="button" class="close">×</button>
     Woops! The vibes have been interrupted. We're working on restoring your session
 </div>
-    <div id = "how-it-works" style="display:block; text-align:center;">
-      <p style="text-transform:uppercase;">how it works</p>
+    <div id = "how-it-works" style="display:block;">
+      <p style="text-transform:uppercase; text-align:center;">how it works</p>
       <ol>
         <li>Your Discover Weekly tracks are rearranged for optimum vibes</li>
         <li>A new Vibify Weekly list is added to your library</li>
