updating bootstrap reference

--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -103,10 +103,11 @@
     <div id = "vibify-button" style="text-align:center; display:none;">
    <button type="button" class="btn btn-success btn-lg" id="send-token" data-loading-text= "<span class='glyphicon-left glyphicon glyphicon-refresh spinning'></span> Vibing your List..."><i class="glyphicon glyphicon-play"></i> Play your Vibify Weekly</button>
     </div>
-    <div class="alert fade in" id="error" style="display:none;">
-    <button type="button" class="close">×</button>
-    Woops! The vibes have been interrupted. We're working on restoring your session
-</div>
+
+    <div class="alert alert-danger" role="alert" id="error" style="display:none; margin:auto; width:50%">
+    <strong>Woops!</strong> The vibes have been interrupted. We're working on restoring your session
+  </div>
+
     <div id = "how-it-works" style="display:block;">
       <p style="text-transform:uppercase; text-align:center;">how it works</p>
       <ol>
