--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -47,6 +47,10 @@
         color:#aaa;
         margin-top:30%;
       }
+
+      #error{
+        margin-top:20px;
+      }
     </style>
   </head>
 
@@ -105,7 +109,7 @@
     </div>
 
     <div class="alert alert-danger" role="alert" id="error" style="display:none; margin:auto; width:50%">
-    <strong>Woops!</strong> The vibes have been interrupted. We're working on restoring your session
+    <strong>Woops!</strong> The vibes have been interrupted.Please try again later. 
   </div>
 
     <div id = "how-it-works" style="display:block;">
@@ -174,6 +178,7 @@
                   $('#loggedin').show();
                   $('#vibify-button').show();
                   $('#how-it-works').hide();
+                  $('#error').hide();
 
                 }
             });
