checking bootstrap responsive classes

--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -52,7 +52,7 @@
   </head>
 
   <body style="background-color:#34393C;">
-    <div class="container">
+    <div class="container visible-xs">
       <div id="login" align="center">
         <h1 style="color:white;">Vibify</h1>
         <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
@@ -114,7 +114,7 @@
       <ol>
         <li>Your Discover Weekly tracks are rearranged for optimum vibes</li>
         <li>A new Vibify Weekly list is added to your library</li>
-        <li>You play it through and never skip a track</li>
+        <li>You play it through and never have to skip a track</li>
       </ol>
       </div>
    
