adding responsive classes

--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -56,6 +56,14 @@
       <div id="login" align="center">
         <h1 style="color:white;">Vibify</h1>
         <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
+          <div id = "how-it-works" style="display:block;">
+              <p style="text-transform:uppercase; text-align:center;">how it works</p>
+              <ol>
+                <li>Your Discover Weekly tracks are rearranged for in the right beats, harmonies, and vibes.</li>
+                <li>A new Vibify Weekly list is added to your library</li>
+                <li>You play it and never need to skip a track</li>
+              </ol>
+           </div>
         <a href="/login" class="btn btn-primary" onClick="javascript:showVibify();">Log in with Spotify</a>
       </div>
       <div id="loggedin">
@@ -109,15 +117,7 @@
     <strong>Woops!</strong> The vibes have been interrupted. Please try again later. 
   </div>
 
-    <div id = "how-it-works" style="display:block;">
-      <p style="text-transform:uppercase; text-align:center;">how it works</p>
-      <ol>
-        <li>Your Discover Weekly tracks are rearranged for optimum vibes</li>
-        <li>A new Vibify Weekly list is added to your library</li>
-        <li>You play it through and never have to skip a track</li>
-      </ol>
-      </div>
-   
+  
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
 
