--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -45,14 +45,14 @@
         margin:auto;
         width:28%;
         color:#aaa;
-        margin-top:30%;
+        margin-top:5%;
       }
 
     </style>
   </head>
 
   <body style="background-color:#34393C;">
-    <div class="container visible-xs">
+    <div class="container">
       <div id="login" align="center">
         <h1 style="color:white;">Vibify</h1>
         <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
