updating how it works copy

--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -57,11 +57,14 @@
         <h1 style="color:white;">Vibify</h1>
         <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
           <div id = "how-it-works" style="display:block;">
-              <p style="text-transform:uppercase; text-align:center;">how it works</p>
-              <ol>
-                <li>Your Discover Weekly tracks are rearranged for in the right beats, harmonies, and vibes.</li>
-                <li>A new Vibify Weekly list is added to your library</li>
-                <li>You play it and never need to skip a track</li>
+              <h3 style="text-transform:uppercase; text-align:center;">how it works</h3>
+              <ol class="col-lg-12">
+                <span>1</span>
+                <ul>Your Discover Weekly tracks are rearranged in the right tempo and harmonies</ul>
+                 <span>2</span>
+                <ul>A new Vibify Weekly list is added to your library</ul>
+                 <span>3</span>
+                <ul>You play it and never need to skip a track</ul>
               </ol>
            </div>
         <a href="/login" class="btn btn-primary" onClick="javascript:showVibify();">Log in with Spotify</a>
