--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -57,7 +57,7 @@
         <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
           <div id = "how-it-works" style="display:block;">
               <h3 style="text-transform:uppercase; text-align:center;">how it works</h3>
-              <ol class="col-lg-12">
+              <ol class="col-lg-12" style="margin-bottom:10px;">
                 <span>1</span>
                 <ul>Your Discover Weekly tracks are rearranged in the right tempo and harmonies</ul>
                  <span>2</span>
@@ -66,7 +66,7 @@
                 <ul>You play it and never need to skip a track</ul>
               </ol>
            </div>
-        <a href="/login" class="btn btn-primary" onClick="javascript:showVibify();">Log in with Spotify</a>
+        <a href="/login" class="btn btn-primary btn-lg" onClick="javascript:showVibify();">Log in with Spotify</a>
       </div>
       <div id="loggedin">
         <div id="user-profile" style="text-align:center;">
