--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -56,14 +56,14 @@
         <h1 style="color:white;">Vibify</h1>
         <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
           <div id = "how-it-works" style="display:block;">
-              <h3 style="text-transform:uppercase; text-align:center;">how it works</h3>
+              <h4 style="text-transform:uppercase; text-align:center;">how it works</h4>
               <ol class="col-lg-12" style="margin-bottom:40px;">
                 <span>1</span>
-                <ul>Your Discover Weekly tracks are rearranged in the right tempo and harmonies</ul>
+                <ul>Your Discover Weekly tracks are reordered using tempo and harmony</ul>
                  <span>2</span>
                 <ul>A new Vibify Weekly list is added to your library</ul>
                  <span>3</span>
-                <ul>You play it and never need to skip a track</ul>
+                <ul>You play it and never have to skip a track</ul>
               </ol>
            </div>
         <a href="/login" class="btn btn-primary btn-lg" onClick="javascript:showVibify();">Log in with Spotify</a>
