adding col-lg-12 class to container

--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -51,7 +51,7 @@
   </head>
 
   <body style="background-color:#34393C;">
-    <div class="container">
+    <div class="container col-lg-12">
       <div id="login" align="center">
         <h1 style="color:white;">Vibify</h1>
         <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
