--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <head>
     <title>Vibify</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -43,7 +43,6 @@
       }
 
       #how-it-works {
-        margin:auto;
         color:#aaa;
         margin-top:5%;
       }
@@ -58,7 +57,7 @@
         <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
           <div id = "how-it-works" style="display:block;">
               <h4 style="text-transform:uppercase; text-align:center;">how it works</h4>
-              <ol class="col-lg-12" style="margin-bottom:40px;">
+              <ol class="col-lg-12" style="margin-bottom:30%;">
                 <span>1</span>
                 <ul>Your Discover Weekly tracks are reordered using tempo and harmony</ul>
                  <span>2</span>
