fixing margin on layout

--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -55,9 +55,9 @@
       <div id="login" align="center">
         <h1 style="color:white;">Vibify</h1>
         <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
-          <div id = "how-it-works" style="display:block;">
+          <div id = "how-it-works" style="display:inline-block;">
               <h4 style="text-transform:uppercase; text-align:center;">how it works</h4>
-              <ol class="col-lg-12" style="margin-bottom:30%;">
+              <ol class="col-lg-12" style="margin-bottom:5%;">
                 <span>1</span>
                 <ul>Your Discover Weekly tracks are reordered using tempo and harmony</ul>
                  <span>2</span>
