--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -45,6 +45,7 @@
       #how-it-works {
         color:#aaa;
         margin-top:5%;
+        margin-bottom:5%;
       }
 
     </style>
@@ -57,14 +58,12 @@
         <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
           <div id = "how-it-works" style="display:block;">
               <h4 style="text-transform:uppercase; text-align:center;">how it works</h4>
-              <ol class="col-lg-12" style="margin-bottom:5%;">
                 <span>1</span>
-                <ul>Your Discover Weekly tracks are reordered using tempo and harmony</ul>
+                <p>Your Discover Weekly tracks are reordered using tempo and harmony</p>
                  <span>2</span>
-                <ul>A new Vibify Weekly list is added to your library</ul>
+                <p>A new Vibify Weekly list is added to your library</p>
                  <span>3</span>
-                <ul>You play it and never have to skip a track</ul>
-              </ol>
+                <p>You play it and never have to skip a track</p>
            </div>
         <a href="/login" class="btn btn-primary btn-lg" onClick="javascript:showVibify();">Log in with Spotify</a>
       </div>
