--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -55,6 +55,7 @@
     <div class="container col-lg-12">
       <div id="login" align="center">
         <h1 style="color:white;">Vibify</h1>
+        <p>(<i>vibe-ify</i>)</p>
         <p style="color:#1ed760;">Stop hitting 'next' on your Spotify Discover Weekly</p>
           <div id = "how-it-works" style="display:block;">
               <h4 style="text-transform:uppercase; text-align:center;">how it works</h4>
