--- a/njtest/web-api-auth-examples/authorization_code/public/index.html
+++ b/njtest/web-api-auth-examples/authorization_code/public/index.html
@@ -208,7 +208,7 @@
           $('#error').hide();
         var user_id = document.getElementById('profile').innerHTML;
         $.ajax({
-          url: 'http://54.172.52.156/discover',
+          url: 'http://vibify.in/discover',
           crossDomain:true,
           data: {
             'access_token': access_token,
